--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@anthropic-ai/sdk": "^0.33.1",
     "@google/generative-ai": "^0.21.0",
     "@huggingface/inference": "^2.8.1",
+    "@prisma/client": "^6.1.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "nlpcloud": "^2.0.7",
     "openai": "^4.77.0",
+    "prisma": "^6.1.0",
     "prismjs": "^1.25.0",
     "shiki": "^1.22.2",
     "tree-sitter": "^0.22.0",
