--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-fileupload": "^1.5.1",
     "groq-sdk": "^0.7.0",
     "highlight.js": "^11.10.0",
+    "jsonwebtoken": "^9.0.2",
     "marked": "^14.1.3",
     "multer": "^1.4.5-lts.1",
     "nlpcloud": "^2.0.7",
