--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.33.1",
+    "@faker-js/faker": "^9.4.0",
     "@google/generative-ai": "^0.21.0",
     "@huggingface/inference": "^2.8.1",
     "@prisma/client": "^6.1.0",
@@ -21,6 +22,7 @@
     "express-fileupload": "^1.5.1",
     "groq-sdk": "^0.7.0",
     "highlight.js": "^11.10.0",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "marked": "^14.1.3",
     "multer": "^1.4.5-lts.1",
@@ -30,6 +32,7 @@
     "prismjs": "^1.25.0",
     "shiki": "^1.22.2",
     "tree-sitter": "^0.22.0",
+    "uuid": "^11.0.5",
     "vscode-oniguruma": "^2.0.1",
     "vscode-textmate": "^9.1.0"
   }
