--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
+    "gpt-tokenizer": "^2.8.1",
     "groq-sdk": "^0.7.0",
     "highlight.js": "^11.10.0",
     "ioredis": "^5.4.2",
